--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 			<h1>Pong!</h1>
 			<div id="game"></div>
 			<!-- Rough-out your SVG mark-up here to start... -->
+			
+			<svg xmlns="http://www.w3.org/2000/svg" >
+				<circle cx="50" cy="50" r="20" stroke="white" stroke-width="4" fill="white" />
+				<line stroke="" stroke-dasharray="5,5" stroke-linecap="null" stroke-linejoin="null" y2="414.3016" x2="272.5" y1="11.45315" x1="272.5" stroke-width="6" fill="white"/>
+			</svg>
 		</div>
 		<script type="text/javascript" src="./src/index.js"></script>
 	</body>
